<resources>
    <string name="app_name">Курсовая работа</string>
    <string name="login_hint">Адрес электронной почты</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="create_account_text">Создать аккаунт</string>
    <string name="registration_login_hint">Логин (обязательно)</string>
    <string name="registration_password_hint">Пароль (обязательно)</string>
    <string name="registration_email_hint">Адрес электронной почты (обязательно)</string>
    <string name="male_text">Мужской</string>
    <string name="female_text">Женский</string>
    <string name="choose_gender">Пол</string>
    <string name="registration_age_hint">Возраст (обязательно)</string>
    <string name="registration_repeat_password_hint">Повторите пароль (обязательно)</string>
    <string name="cancel_button_text">Отмена</string>
    <string name="login_checkbox">Запомнить почту и пароль</string>
    <string name="account_title">Аккаунт</string>
    <string name="user_favorite_films">Избранные фильмы</string>
    <string name="user_watched_films">Просмотренные фильмы</string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <array name="gender">
        <item>Мужской</item>
        <item>Женский</item>
    </array>

    <array name="list_of_genres">
        <item>все жанры</item>
        <item>комедия</item>
        <item>драма</item>
        <item>мелодрама</item>
        <item>боевик</item>
        <item>фэнтези</item>
        <item>триллер</item>
        <item>криминал</item>
        <item>приключения</item>
        <item>мультфильм</item>
        <item>фантастика</item>
        <item>семейный</item>
        <item>военный</item>
        <item>спорт</item>
        <item>музыка</item>
        <item>детектив</item>
        <item>биография</item>
        <item>история</item>

    </array>

    <string name="title_activity_navigation_drawer_main">NavigationDrawerMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search_films_by_genres">Показать фильмы</string>
    <string name="search_films_by_genres_hint">Введите жанр (оставить пустым, чтобы увидеть все фильмы)</string>
    <string name="genres_title">Жанры:</string>
    <string name="old_password_hint">Введите старый пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="repeat_new_password_hint">Повторите новый пароль</string>
    <string name="add_new_film">Добавить новый фильм</string>
    <string name="change_film_title">Изменить фильм</string>
    <string name="favorite_film">Избранное</string>
    <string name="new_film_name">Название фильма (обязательно)</string>
    <string name="new_film_genres">Жанры</string>
    <string name="new_film_year">Год выпуска</string>
    <string name="new_film_age_limit">Для лиц старше (по-умолчанию 0)</string>
    <string name="new_film_description">Описание (обязательно)</string>
    <string name="new_film_price">Цена (по-умолчанию 0)</string>
    <string name="new_film_image_url">Ссылка на картинку</string>
    <string name="comments_text_view">Комментарии</string>
    <string name="new_comment_hint">Введите комментарий</string>
    <string name="send_comment_button">Отправить</string>
    <string name="find_film">Поиск фильма по названию</string>
    <string name="find_film_button">Поиск</string>
</resources>
