<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_film_name"
        android:layout_marginStart="4pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_film_name"
        android:inputType="text"
        android:hint="@string/new_film_name"
        android:layout_margin="2pt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_film_genres"
        android:layout_marginStart="4pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_film_genres"
        android:inputType="text"
        android:hint="@string/new_film_genres"
        android:layout_margin="2pt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_film_year"
        android:layout_marginStart="4pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_film_year"
        android:inputType="number"
        android:hint="@string/new_film_year"
        android:layout_margin="2pt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_film_age_limit"
        android:layout_marginStart="4pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_film_age_limit"
        android:inputType="number"
        android:hint="@string/new_film_age_limit"
        android:layout_margin="2pt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_film_description"
        android:layout_marginStart="4pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_film_descriptiom"
        android:inputType="text"
        android:hint="@string/new_film_description"
        android:layout_margin="2pt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_film_price"
        android:layout_marginStart="4pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_film_price"
        android:inputType="number"
        android:hint="@string/new_film_price"
        android:layout_margin="2pt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_film_image_url"
        android:layout_marginStart="4pt"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_film_image_url"
        android:inputType="textUri"
        android:hint="@string/new_film_image_url"
        android:layout_margin="2pt"/>

</LinearLayout>