<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="125pt"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:id="@+id/login_edit_id"
        android:layout_gravity="center"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif" />

    <EditText
        android:layout_width="125pt"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:id="@+id/password_edit_id"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button_id"
        android:text="@string/login_button_text"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account_text"
        android:textColor="@color/blueClickableColor"
        android:textSize="9pt"
        android:layout_margin="3pt"
        android:id="@+id/registation_text_view_id" />

</LinearLayout>