<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/old_password"
        android:hint="@string/old_password_hint"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_password"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repeat_new_password"
        android:hint="@string/repeat_new_password_hint"
        android:inputType="textPassword"
        />

</LinearLayout>